--- a/Portals/Web.config
+++ b/Portals/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Portals-20150209022838.mdf;Initial Catalog=aspnet-Portals-20150209022838;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="CourseDBContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Courses.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ForumsContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Forums.mdf;Integrated Security = True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
