--- a/Portals/Portals.csproj
+++ b/Portals/Portals.csproj
@@ -240,9 +240,13 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="img\DataAppInstitute.jpg" />
+    <Content Include="img\DEclass.jpg" />
     <Content Include="img\downloads-bg.jpg" />
+    <Content Include="img\DSClass.jpg" />
     <Content Include="img\intro-bg.jpg" />
     <Content Include="img\map-marker.png" />
+    <Content Include="img\TestiMonials.png" />
+    <Content Include="img\wallBackground.jpg" />
     <Content Include="Scripts\js\bootstrap.js" />
     <Content Include="Scripts\js\bootstrap.min.js" />
     <Content Include="Scripts\js\grayscale.js" />
